--- a/index.html
+++ b/index.html
@@ -1,11 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SGU Thời khóa biểu | SGU Schedule</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<title>SGU Thời khóa biểu | SGU Schedule</title>
+<style>
+    .selector-for-some-widget {
+        box-sizing: content-box;
+    }
+
+    .bdr {
+        border-radius: 10px;
+        overflow: hidden;
+    }
+</style>
+</head>
+
 <body>
-    
+    <section>
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="col g-5 py-5 mx-5 max-w-xs">
+                <div class="row">
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Sai Gon University Schedule | Thời khóa
+                        biểu</h1>
+                    <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the
+                        world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
+                        responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="mb-3">
+                        <label for="textarea1" class="form-label">Input here</label>
+                        <textarea class="form-control" id="textarea1" placeholder="" style="height: 200px"></textarea>
+                        <button type="button" class="btn btn-outline-primary btn-lg px-4 mt-3 me-3">Clear</button>
+                        <button type="button" class="btn btn-primary btn-lg px-4 mt-3">Tiếp tục</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container mx-auto">
+        <hr>
+    </div>
+    <section style="background-image: radial-gradient(#cfe2ff, #cfe2ff, white, white, white);">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="table-responsive" style="overflow: visible;">
+                <table class="table shadow bdr">
+                    <thead>
+                        <tr class="table-primary">
+                            <th>Thứ/Tiết</th>
+                            <th>Thứ hai</th>
+                            <th>Thứ ba</th>
+                            <th>Thứ tư</th>
+                            <th>Thứ năm</th>
+                            <th>Thứ sáu</th>
+                            <th>Thứ bảy</th>
+                            <th>Chủ nhật</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="align-middle bg-light">7h</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td class="border-end">Row 2</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">7h50</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td class="border-end">Row 2</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td>Row 2</td>
+                            <td></td>
+                        </tr>
+                        <!-- Thêm các hàng và cột tiếp theo tương tự -->
+                        <!-- Ví dụ: -->
+                        <tr>
+                            <td class="align-middle">9h</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td class="border-end">Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">9h50</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td class="border-end">Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">10h40</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td colspan="8" class="text-center align-middle">Nghỉ trưa</td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">1h</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">1h50</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">3h</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">3h50</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="align-middle">4h40</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td>Row 3</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
