--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         }
     </style>
     <script src="./js/convertData.js"></script>
+    <script src="./js/functionalScript.js"></script>
 </head>
 
 <body>
@@ -28,18 +29,18 @@
                 <div class="row">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Sai Gon University Schedule | Thời khóa
                         biểu</h1>
-                    <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the
-                        world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
-                        responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                    <p class="lead"></p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     </div>
                 </div>
                 <div class="row">
                     <div class="mb-3">
-                        <label for="textarea1" class="form-label">Input here</label>
+                        <label for="textarea1" class="form-label">Dán vào đây</label>
                         <textarea class="form-control" id="textarea1" placeholder="" style="height: 200px"></textarea>
                         <button type="button" class="btn btn-outline-danger btn-lg px-4 mt-3 me-3">Clear</button>
-                        <button type="button" class="btn btn-primary btn-lg px-4 mt-3" onclick="convertData()">Tiếp tục</button>
+                        <button type="button" class="btn btn-primary btn-lg px-4 mt-3 me-3" onclick="convertData()">Tiếp tục</button>
+                        <button type="button" class="btn btn-outline-warning btn-lg px-4 mt-3 me-3" onclick="renderTable()">Test table</button>
+
                     </div>
                 </div>
             </div>
@@ -52,123 +53,7 @@
         <div class="container col-xxl-8 px-4 py-5 mb-5">
             <div class="table-responsive" style="overflow: visible;">
                 <table id="scheduletable" class="table shadow bdr">
-                    <thead>
-                        <tr class="table-primary">
-                            <th class="border-end px-4">Thứ/Giờ</th>
-                            <th class="border-end px-4">Thứ hai</th>
-                            <th class="border-end px-4">Thứ ba</th>
-                            <th class="border-end px-4">Thứ tư</th>
-                            <th class="border-end px-4">Thứ năm</th>
-                            <th class="border-end px-4">Thứ sáu</th>
-                            <th class="border-end px-4">Thứ bảy</th>
-                            <th class="border-end px-4">Chủ nhật</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">7h</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">7h50</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4">Row 2</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">9h</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4" rowspan="3">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">9h50</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <!-- <td class="border-end px-4">Row 3</td> -->
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">10h40</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <!-- <td class="border-end px-4">Row 3</td> -->
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td colspan="8" class="text-center align-middle">Nghỉ trưa</td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">1h</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">1h50</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">3h</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">3h50</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                        <tr>
-                            <td class="border-end align-middle bg-light px-4">4h40</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4">Row 3</td>
-                            <td class="border-end px-4"></td>
-                        </tr>
-                    </tbody>
+                    
                 </table>
             </div>
         </div>
